build/log/idf_py_stderr_output_32541
Command: make -j 6 all
/workspace/components/ai_service/ai_service.c: In function '_http_event_handler':
/workspace/components/ai_service/ai_service.c:84:5: error: enumeration value 'HTTP_EVENT_ON_HEADERS_COMPLETE' not handled in switch [-Werror=switch]
   84 |     switch(evt->event_id) {
      |     ^~~~~~
/workspace/components/ai_service/ai_service.c:84:5: error: enumeration value 'HTTP_EVENT_ON_STATUS_CODE' not handled in switch [-Werror=switch]
/workspace/components/ai_service/ai_service.c: In function 'ai_service_execute_command_with_image':
/workspace/components/ai_service/ai_service.c:321:12: error: redeclaration of 'json' with no linkage
  321 |     cJSON *json = cJSON_CreateObject();
      |            ^~~~
/workspace/components/ai_service/ai_service.c:274:12: note: previous declaration of 'json' with type 'cJSON *'
  274 |     cJSON *json, *messages, *message, *content, *text_content, *image_content, *image_url;
      |            ^~~~
/workspace/components/ai_service/ai_service.c:329:12: error: redeclaration of 'messages' with no linkage
  329 |     cJSON *messages = cJSON_CreateArray();
      |            ^~~~~~~~
/workspace/components/ai_service/ai_service.c:274:19: note: previous declaration of 'messages' with type 'cJSON *'
  274 |     cJSON *json, *messages, *message, *content, *text_content, *image_content, *image_url;
      |                   ^~~~~~~~
/workspace/components/ai_service/ai_service.c:330:12: error: redeclaration of 'message' with no linkage
  330 |     cJSON *message = cJSON_CreateObject();
      |            ^~~~~~~
/workspace/components/ai_service/ai_service.c:274:30: note: previous declaration of 'message' with type 'cJSON *'
  274 |     cJSON *json, *messages, *message, *content, *text_content, *image_content, *image_url;
      |                              ^~~~~~~
/workspace/components/ai_service/ai_service.c:333:12: error: redeclaration of 'content' with no linkage
  333 |     cJSON *content = cJSON_CreateArray();
      |            ^~~~~~~
/workspace/components/ai_service/ai_service.c:274:40: note: previous declaration of 'content' with type 'cJSON *'
  274 |     cJSON *json, *messages, *message, *content, *text_content, *image_content, *image_url;
      |                                        ^~~~~~~
/workspace/components/ai_service/ai_service.c:334:12: error: redeclaration of 'text_content' with no linkage
  334 |     cJSON *text_content = cJSON_CreateObject();
      |            ^~~~~~~~~~~~
/workspace/components/ai_service/ai_service.c:274:50: note: previous declaration of 'text_content' with type 'cJSON *'
  274 |     cJSON *json, *messages, *message, *content, *text_content, *image_content, *image_url;
      |                                                  ^~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/ai_service/CMakeFiles/__idf_ai_service.dir/build.make:79: esp-idf/ai_service/CMakeFiles/__idf_ai_service.dir/ai_service.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:7995: esp-idf/ai_service/CMakeFiles/__idf_ai_service.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
